App/static/css/addCourse.css
.formContainer {
    margin-top: 30px;
    margin-bottom: 20px;
    width: 500px;
}

form {
    background-color: var(--secondary-color);
    padding: 2.5rem 2rem;
    border-radius: 10px;

    text-align: center;
    margin-left: auto;
    margin-right: auto;

    width: fit-content;

    box-shadow: 8px 10px 37px -12px rgba(0, 0, 0, 0.62);
    -webkit-box-shadow: 8px 10px 37px -12px rgba(0, 0, 0, 0.62);
    -moz-box-shadow: 8px 10px 37px -12px rgba(0, 0, 0, 0.62);
}

form h2 {
    margin-bottom: 30px;
    font-size: 30px;
}

form textarea {
    resize: none;
}

.normalLabel {
    display: flex;
    flex-direction: column;
    text-align: left;
}

.formInputContainer {
    margin-bottom: 20px;
}


.mainLabel {
    margin-bottom: 5px;
    font-size: 18px;
    font-weight: 500;
}

.normalLabel input,
.normalLabel textarea {
    background: var(--primary-color);
    border: none;
    padding: 0.5rem 0.8rem;
    color: white;
    border-radius: 6px;
    width: 100%;
}


#submitBtn {
    background: var(--tertiary-color);
    color: white;
    border: none;
    padding: 1rem 1.5rem;
    margin-top: 30px;
    border-radius: 6px;
    cursor: pointer;
    transition: background 0.15s ease-in;
    font-size: 16px;
    font-weight: 500;
    width: 100%;
}

#submitBtn:hover {
    background: #5d45bd;
}

.levelContainer,
.semesterContainer {
    text-align: left;
}

.levelContainer .mainLabel,
.semesterContainer .mainLabel {
    margin-right: 10px;
}

.smallLabel {
    margin-right: 7px;
}


/* media queries */
@media screen and (min-width: 480px) {
    form h2 {
        font-size: 34px;
    }
}


@media screen and (min-width: 900px) {
    #SubmitBtn {
        font-size: 18px;
    }
}

